Refactor UnitStatistics.cshtml Move ViewModels to Web project

--- a/src/uLearn.Web/Views/Analytics/PersonalStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/PersonalStatistics.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Globalization
-@model uLearn.PersonalStatisticPageModel
+@model PersonalStatisticPageModel
 @{
 	ViewBag.Title = "Personal statistics";
 }
