--- a/src/uLearn.Web/Views/Course/_AskBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_AskBar.cshtml
@@ -1,4 +1,4 @@
-﻿@model uLearn.CoursePageModel
+﻿@model CoursePageModel
 <a id="ask_question_window" data-toggle="modal" data-target="#myModal" href="#myModal">
 	Задать вопрос по материалу
 </a>
