--- a/src/uLearn.Web/Views/Course/_RatesBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_RatesBar.cshtml
@@ -1,4 +1,4 @@
-﻿@model uLearn.CoursePageModel
+﻿@model CoursePageModel
 <form id="ratings" class="rate-buttons ctrl-group full-width">
 	<div id="ApplyRate" data-url="@Url.Action("ApplyRate", new{ courseId = Model.CourseId, slideId = Model.Slide.Id})"></div>
 	<div class="btn-group rates-bar ctrl-group" data-toggle="buttons">
