--- a/src/uLearn.Web/Views/Quiz/Analytics.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Analytics.cshtml
@@ -2,7 +2,7 @@
 @using System.Activities.Statements
 @using uLearn
 @using uLearn.Quizes
-@model uLearn.QuizAnalyticsModel
+@model QuizAnalyticsModel
 
 @functions {
 	private static int GetColSpan(QuizBlock block)
