--- a/src/uLearn.Web/Views/Shared/DisplayTemplates/HintWithLikeButton.cshtml
+++ b/src/uLearn.Web/Views/Shared/DisplayTemplates/HintWithLikeButton.cshtml
@@ -1,4 +1,4 @@
-﻿@model uLearn.HintWithLikeButton
+﻿@model HintWithLikeButton
 <div>
 	<button id="@(Model.HintId + "likeHint")"
 	class="like-left-location btn btn-xs like-button @(Model.IsLiked ? "btn-primary" : "btn-default")"
