--- a/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
@@ -1,4 +1,4 @@
-﻿@model uLearn.PrevNextButtonsModel
+﻿@model PrevNextButtonsModel
 
 <div class="btn-group ctrl-group full-width" id="nav_arrows"
 	 data-hasnext="@(Model.HasNextSlide ? "true" : "")"
