--- a/src/uLearn.Web/Views/Course/_AskBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_AskBar.cshtml
@@ -1,21 +1,26 @@
 ﻿@model CoursePageModel
-<a id="ask_question_window" data-toggle="modal" data-target="#myModal" href="#myModal">
+<a id="ask_question_window" data-toggle="modal" data-target="#askModal" href="#askModal">
 	Задать вопрос по материалу
 </a>
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div id="AddQuestion" class="modal-dialog" data-url="@Url.Action("AddQuestion")">
+<div class="modal fade" id="askModal" role="dialog">
+	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-				<h4 class="modal-title" id="myModalLabel">Задать вопрос преподавателю</h4>
+				<h4 class="modal-title">Задать вопрос преподавателю</h4>
 			</div>
 			<div class="modal-body">
-				<div>
-					Ваш вопрос увидят преподаватели и смогут разобрать его на аудиторной практике.
-					Кроме того, авторы курса смогут подправить материал так, чтобы он стал понятнее.
-				</div>
-				<textarea id="questField" class="ask-bar"> </textarea>
-				<button class="btn btn-primary" id="sendButton" type="button" data-dismiss="modal" onclick="sendQuestion('@Model.Slide.Title', '@Model.Slide.Info.UnitName')">Отправить</button>
+				@using (Ajax.BeginForm("AddQuestion", "Course", new AjaxOptions {OnSuccess = "$('#askModal').modal('hide')"}))
+				{
+					<input type="hidden" name="courseId" value="@Model.CourseId"/>
+					<input type="hidden" name="slideId" value="@Model.Slide.Id"/>
+					<div>
+						Ваш вопрос увидят преподаватели и смогут разобрать его на аудиторной практике.
+						Кроме того, авторы курса смогут подправить материал так, чтобы он стал понятнее.
+					</div>
+					<textarea id="questField" name="question" class="ask-bar"></textarea>
+					<button class="btn btn-primary" type="submit">Отправить</button>
+				}
 			</div>
 		</div>
 	</div>
