Small style fixes. Set page titles.

--- a/src/uLearn.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/src/uLearn.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿@model uLearn.Web.Models.ExternalLoginConfirmationViewModel
 @{
-	ViewBag.Title = "Регистрация";
+	ViewBag.Title = "Регистрация | uLearn";
 }
 <div class="container">
 	<h2>@ViewBag.Title.</h2>
