--- a/src/uLearn.Web/Views/Account/Manage.cshtml
+++ b/src/uLearn.Web/Views/Account/Manage.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Управление аккаунтом";
+    ViewBag.Title = "Управление аккаунтом | uLearn";
 }
 <div class="container">
 	<h2>@ViewBag.Title</h2>
