--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -1,7 +1,7 @@
 ﻿@using uLearn
 @model UnitStatisticPageModel
 @{
-	ViewBag.Title = "Успеваемость студентов";
+	ViewBag.Title = "Статистика и успеваемость | uLearn";
 }
 
 <body>
@@ -14,7 +14,7 @@
 		</ul>
 
 		<h2 id="rate">Оценки слайдов</h2>
-		<table class="table table-condensed" style="width:auto">
+		<table class="table table-condensed table-autowidth">
 			<thead>
 				<tr>
 					<th>Слайд</th>
