--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	ViewBag.Title = "Учебные курсы";
+	ViewBag.Title = "uLearn";
 }
 <div class="container body-content">
 	<div class="jumbotron">
