--- a/src/uLearn.Web/Views/Unit/CourseList.cshtml
+++ b/src/uLearn.Web/Views/Unit/CourseList.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<uLearn.Course>
 
 @{
-	ViewBag.Title = "Управление курсами";
+	ViewBag.Title = "Admin Courses | uLearn";
 }
 <div class="container">
 	<h2>Управление курсами</h2>
