--- a/src/uLearn.Web/Views/Account/ExternalLoginFailure.cshtml
+++ b/src/uLearn.Web/Views/Account/ExternalLoginFailure.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Не удалось войти";
+    ViewBag.Title = "Не удалось войти | uLearn";
 }
 <div class="container">
 	<h2>@ViewBag.Title.</h2>
