--- a/src/uLearn.Web/Views/Course/_Quiz.cshtml
+++ b/src/uLearn.Web/Views/Course/_Quiz.cshtml
@@ -49,8 +49,17 @@
 	{
 		@Html.Action("Analytics", "Quiz", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index })
 	}
-	<div class="no-display" id="GetRightAnswersToQuiz" data-url="@Url.Action("GetRightAnswersToQuiz","Quiz")">none</div>
+	<div class="no-display" id="GetRightAnswersToQuiz" data-url="@Url.Action("GetRightAnswersToQuiz", "Quiz")"></div>
 	<div id="SubmitQuiz" data-url='@Url.Action("SubmitQuiz","Quiz")'>
 		<button class="btn btn-primary quiz-submit-btn" onclick="submitQuiz('@Model.CourseId','@Model.Slide.Index','@Model.AnswersToQuizes.Count')">Готово!</button>
+		@if (User.IsInRole(LmsRoles.Tester))
+		{
+			using (Html.BeginForm("ClearAnswers", "Quiz"))
+			{
+				<input type="hidden" name="slideId" value="@Model.Slide.Id" />
+				<input type="hidden" name="courseId" value="@Model.CourseId" />
+				<button class="btn btn-danger" type="submit">Очистить ответы</button>
+			}
+		}
 	</div>
 }
