--- a/src/uLearn.Web/Views/Course/_FillInBlock.cshtml
+++ b/src/uLearn.Web/Views/Course/_FillInBlock.cshtml
@@ -5,15 +5,14 @@
 	var value = "";
 	var quizRes = "";
 	var quizResSample = "none";
-    var quizBlock = Model.CurrentBlock;
+    var quizBlock = (FillInBlock)Model.CurrentBlock;
 	if (Model.Passed && Model.CourseModel.AnswersToQuizes[quizBlock.Id].FirstOrDefault() != null)
 	{
 		value = Model.CourseModel.AnswersToQuizes[quizBlock.Id].FirstOrDefault();
 		quizRes = Model.CourseModel.AnswersToQuizes[quizBlock.Id][1] == "False" ? "wrong-quiz" : "right-quiz";
 		quizResSample = Model.CourseModel.AnswersToQuizes[quizBlock.Id][1] == "False" ? "block-display" : "no-display";
 	}
-	var fillIn = quizBlock as FillInBlock;
-	var sample = fillIn.Sample;
+	var sample = quizBlock.Sample;
 	<div class="quiz quiz-block-input">
 		<label>
 			<input class="@quizRes" value="@value" id='@(quizBlock.Id + "quizBlock")'>
