--- a/src/uLearn.Web/Views/Course/_ChoiceBlock.cshtml
+++ b/src/uLearn.Web/Views/Course/_ChoiceBlock.cshtml
@@ -9,15 +9,12 @@
 		@for (int itemIndex = 0; itemIndex < quizBlock.Items.Length; itemIndex++)
 		{
 			var ident = isMultiply ? itemIndex + "noMult" : Model.BlockIndex.ToString();
-			var var = quizBlock.Items[itemIndex];
-			var ans = "";
-			if (Model.Passed && Model.CourseModel.AnswersToQuizes[quizBlock.Id].Contains(var.Id))
-			{
-				ans = "checked";
-			}
+			var item = quizBlock.Items[itemIndex];
+			var itemChecked = Model.Passed && Model.CourseModel.AnswersToQuizes[quizBlock.Id].Contains(item.Id);
+			var ans = itemChecked ? "checked" : "";
+			var itemClass = Model.Passed ? (item.IsCorrect ? "right-quiz" : itemChecked ? "wrong-quiz" : "") : "";
 			<div class="quiz">
-				<i></i>
-				<label><input @ans id='@(quizBlock.Id + "quizBlock" + var.Id)' name=@("group"+ident) type="@typeInp">@var.Description</label>
+				<label class="@itemClass"><input @ans id='@(quizBlock.Id + "quizBlock" + item.Id)' name=@("group"+ident) type="@typeInp">@item.Description</label>
 			</div>
 		}
 	</div>
