--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -3,8 +3,10 @@
 }
 <div class="container body-content">
 	<div class="jumbotron">
+		<img src="~/Content/logo.png" class="jumbotron-logo"/>
 		<h1>uLearn</h1>
-		<p class="lead">Интерактивные онлайн учебные курсы по программированию</p>
+		<p class="lead">Интерактивные учебные онлайн курсы по программированию</p>
+		<div class="clearfix"></div>
 	</div>
 
 	<div class="row">
