--- a/src/uLearn.Web/Views/Account/_SetPasswordPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_SetPasswordPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@model uLearn.Web.Models.ManageUserViewModel
 
 <p class="text-info">
-	You do not have a local username/password for this site. Add a local
-	account so you can log in without an external login.
+	У вас ещё нет логина и пароля для этого сайта.
+	Создайте логин и пароль и вы сможете заходить на этот сайт без использования внешнего логина.
 </p>
 
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
