--- a/src/uLearn.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
         <li>
             @Html.ActionLink("Здравствуй, " + User.Identity.GetUserName() + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a></li>
     </ul>
     }
 }
