Fix unlike solution button Fix autocomplete js bug Fix slide-errors

--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 			</p>
 			<p>
 				Курс разработан для студентов первого года обучения компьютерных специальностей ИМКН УрФУ.
-				Расчитан на людей с минимальным опытом программирования.
+				Расcчитан на людей с минимальным опытом программирования.
 			</p>
 			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, null)</p>
 		</div>
