--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
 	<meta name="title" content="uLearn" />
 	<meta name="description" content="Интерактивные учебные онлайн курсы по программированию" />
 	<link rel="image_src" href="~/Content/logo.png">
+	<link rel="shortcut icon" href="~/favicon.ico?v=4" />
 	@Styles.Render("~/css")
 	@Scripts.Render("~/modernizr-js")
 </head>
