fix tablesorter js

--- a/src/uLearn.Web/Views/Analytics/UsersProgress.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UsersProgress.cshtml
@@ -66,4 +66,6 @@
 		}
 	</tbody>
 </table>
+<script src="~/tablesorter-master/jquery.tablesorter.js"></script>
+<script src="~/Scripts/table-configurator.js"></script>
 <script src="~/Scripts/user-group-name-change.js"></script>
