--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -6,6 +6,12 @@
 
 <body>
 	<div class="wide-container">
+		<div class="pull-right">
+			<a href="#" data-toggle="collapse" data-target="#tocContainer">Оглавление курса</a>
+			<div class="collapse" id="tocContainer">
+				@Html.Action("TableOfContents", "SlideNavigation")
+			</div>
+		</div>
 		<h1>Модуль &laquo;@Model.UnitName&raquo;</h1>
 		<ul>
 			<li><a href="#rate">Оценки слайдов</a></li>
@@ -25,7 +31,7 @@
 
 		<h2 id="progress">Прогресс по студентам</h2>
 		<div class="load-content" data-url="@Url.Action("UsersProgress", args)"></div>
-</div>
+	</div>
 </body>
 
 @section scripts{
