Final review Ifs unit. Fix some analytics bug

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -264,7 +264,9 @@ a.nav-arrow:hover {
 	background-color: lightgreen;
 	padding: 10px 15px;
 	border-bottom: 1px solid transparent;
+	-ms-border-top-right-radius: 3px;
 	border-top-right-radius: 3px;
+	-ms-border-top-left-radius: 3px;
 	border-top-left-radius: 3px;
 }
 
